# cde

./: Cargo.toml  README.md  test.out
core/cli/: Cargo.toml  test.out
core/codegen/: Cargo.toml
core/codegen/src/: .lib.rs.swp  lib.rs
core/lib/: Cargo.toml  build.rs  enum_try.rs
core/lib/src/: class.rs  lib.rs  tag.rs  varuint.rs
core/lib/tests/: decode.rs  encode.rs  frombytes.rs  fromstr.rs  fromtag.rs
examples/: Cargo.toml
examples/basics/: Cargo.toml  test.out
examples/basics/src/: main.rs
src/: lib.rs  subclass.rs  subsubclass.rs  typetag.rs
