[package]
name = "cde"
version = "0.1.0"
authors = ["Dave Huseby <dave@cryptid.tech>"]
description = "A universal encoding scheme for all cryptographic data"
documentation = "https://docs.rs/cde"
repository = "https://github.com/cryptidtech/cde"
readme = "README.md"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
data-encoding = "2.3"
structopt = "0.3"
thiserror = "1.0"
vlog = "0.1"
