[package]
name = "cde_cli"
version = "0.3.1"
authors = ["Dave Huseby <dave@cryptid.tech>"]
description = "A CLI utility for encoding/decoding using CDE"
documentation = "https://docs.rs/cde"
repository = "https://github.com/cryptidtech/cde"
readme = "../../README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
cde = { version="0.3", path = "../lib" }
anyhow = "1.0"
log = "0.4"
stderrlog = "0.5"
structopt = "0.3"
tempfile = "3.3"
