[package]
name = "cde_codegen"
version = "0.1.0"
authors = ["Dave Huseby <dave@cryptid.tech>"]
description = "Procedural macros for CDE class, sub-class, and sub-sub-class tagging"
documentation = "https://docs.rs/cde"
repository = "https://github.com/cryptidtech/cde"
readme = "../../README.md"
license = "Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
cde = { path = "../lib" }
quote = "1.0"
syn = { version = "1.0.72", features = ["full", "visit", "visit-mut", "extra-traits", "parsing"] }
proc-macro2 = "1.0.27"
