[package]
name = "cde"
version = "0.2.0"
authors = ["Dave Huseby <dave@cryptid.tech>"]
description = "A universal encoding scheme for all cryptographic data"
documentation = "https://docs.rs/cde"
repository = "https://github.com/cryptidtech/cde"
readme = "../../README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
data-encoding = "2.3"
lazy_static = "1.4"
log = "0.4"
syn = "1.0"
thiserror = "1.0"
