[package]
name = "cde"
version = "0.2.0"
authors = ["Dave Huseby <dave@cryptid.tech>"]
description = "A universal encoding scheme for all cryptographic data"
documentation = "https://docs.rs/cde"
repository = "https://github.com/cryptidtech/cde"
readme = "../../README.md"
license = "Apache-2.0"
edition = "2018"

[dependencies]
anyhow = { version = "1.0", default-features = false }
data-encoding = { version = "2.3", default-features = false }
data-encoding-macro = { version = "0.1.12", default-features = false }
phf = { version = "0.10", default-features = false }
thiserror = { version = "1.0", default-features = false }

[build-dependencies]
phf_codegen = "0.10"
