[package]
name = "cde"
version = "0.3.7"
authors = ["Dave Huseby <dave@cryptid.tech>"]
description = "A universal encoding scheme for all cryptographic data"
documentation = "https://docs.rs/cde"
repository = "https://github.com/cryptidtech/cde"
readme = "../../README.md"
license = "Apache-2.0"
edition = "2018"
keywords = ["no_std", "cryptography", "encoding"]
rust-version = "1.58.1"

[features]
alloc = [
  "anyhow/default",
  "data-encoding/alloc",
  "data-encoding-macro",
  "phf/default",
  "thiserror"
]
default = [
  "std"
]
std = [
  "anyhow/default",
  "data-encoding/default",
  "data-encoding-macro",
  "phf/default",
  "thiserror"
]
no-std = [
  "anyhow",
  "data-encoding",
  "data-encoding-macro",
  "phf",
  "thiserror"
]

[dependencies]
anyhow = { version = "1.0", optional = true, default-features = false }
data-encoding = { version = "2.3", optional = true, default-features = false }
data-encoding-macro = { version = "0.1.12", optional = true, default-features = false }
phf = { version = "0.10", optional = true, default-features = false }
thiserror = { version = "1.0", optional = true, default-features = false }

[dev-dependencies]
rand = "0.8"

[build-dependencies]
phf_codegen = "0.10"
